--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    
+    <h1>get your random psw </h1>
 
     <script type="text/Javascript" src="./script.js"></script>
 </body>
